[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssyubix"
version = "2.3.0"
description = "AgentLink MCP for cross-device AI agent communication via Cloudflare Workers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "claude", "agent", "cloudflare", "websocket", "p2p"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ssyubix = "agentlink_mcp.server:main"

[project.urls]
Homepage = "https://github.com/syuaibsyuaib/ssyubix"
Repository = "https://github.com/syuaibsyuaib/ssyubix"
Issues = "https://github.com/syuaibsyuaib/ssyubix/issues"
Changelog = "https://github.com/syuaibsyuaib/ssyubix/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlink_mcp"]
