[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssyubix"
version = "2.0.0"
description = "AgentLink MCP — P2P communication between Claude agents via Cloudflare Workers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "claude", "agent", "cloudflare", "websocket", "p2p"]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ssyubix = "agentlink_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["agentlink_mcp"]
